syntax = "proto3";

package calculator;
option go_package = "./calculator/calculator_pb";

message Sum{
  int64 num1 = 1;
  int64 num2 = 2;
}

message SumRequest{
  Sum sumIt = 1;
}

message SumResponse{
  int64 result = 1;
}

service CalculatorService{
  rpc SumNums(SumRequest) returns (SumResponse){};
}